
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_SearchView" #DDDDDD
{

class "CSearchResultHighlightingDelegate"
{
}

class "CSearchResultModel"
{
}

}

package "DMA_SearchView_API" #DDDDDD
{

class "ISearchResultModel"
{
    + {abstract} virtual int getFileIdx( const QModelIndex& idx ) const = 0
    + {abstract} virtual std::pair<bool__tIntRange> addNextMessageIdxVec(const tFoundMatchesPack& foundMatchesPack) = 0
    + {abstract} virtual std::pair<int__QString > getUMLDiagramContent() const = 0
    + {abstract} virtual tPlotContent createPlotContent() const = 0
    + {abstract} virtual void resetData() = 0
    + {abstract} virtual void setFile(const tFileWrapperPtr& pFile) = 0
    + {abstract} virtual void updateView(const int& fromRow = 0) = 0
}

}

package "DMA_Settings_API" #DDDDDD
{

class "CSettingsManagerClient"
{
}

}

package "Qt" #DDDDDD
{

class "QStyledItemDelegate"
{
}

}

'====================Inheritance section====================
CSettingsManagerClient <|-- CSearchResultHighlightingDelegate : extends
QStyledItemDelegate <|-- CSearchResultHighlightingDelegate : extends
CSettingsManagerClient <|-- CSearchResultModel : extends
ISearchResultModel <|-- CSearchResultModel : implements

@enduml